ADD: Se agregan swagger a customers y endpoint All con su determinada ruta
