# services/order_service/swagger/v1/swagger.json
@@ -19,6 +19,24 @@
             "schema": {
               "type": "integer"
             }
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "description": "Número de página (default: 1)",
+            "schema": {
+              "type": "integer"
+            }
+          },
+          {
+            "name": "per_page",
+            "in": "query",
+            "required": false,
+            "description": "Cantidad por página (default: 10, max: 100)",
+            "schema": {
+              "type": "integer"
+            }
           }
         ],
         "responses": {
